// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Exchange Job Mapping Info should NOT display an add mapping button, when the selected exchange job mapping is not mapped 1`] = `
<pf-exchange-job-mapping-info
  activeExchangeJobToCompanyJobIdSubscription={[Function Subscriber]}
  addingMapping="false"
  addingMapping$={[Function Store]}
  addingMappingSubscription={[Function Subscriber]}
  applyingMapping$={[Function Store]}
  applyingMappingError$={[Function Store]}
  carousel="undefined"
  closeClicked={[Function EventEmitter]}
  companyDescriptionQuery=""
  companyJobQuery=""
  companyJobsToMapTo$={[Function Store]}
  companyJobsToMapToLoading$={[Function Store]}
  companyJobsToMapToLoadingError$={[Function Store]}
  debouncedQueryValue=""
  deletingMapping$={[Function Store]}
  deletingMappingError$={[Function Store]}
  editMappingClicked={[Function EventEmitter]}
  exchangeJobInfo={[Function Object]}
  getActiveCompanyJobId$={[Function Store]}
  loadingExchangeMappingInfo$={[Function Store]}
  permissions={[Function Function]}
  selectedCompanyJobInfoModels$={[Function Store]}
  selectedCompanyJobsSubscription={[Function Subscriber]}
  selectedExchangeJobMapping={[Function Object]}
  selectedExchangeJobMapping$={[Function Store]}
  selectedExchangeJobMappingSubscription={[Function Subscriber]}
  selectedJobs={[Function Array]}
  selectedMappingCompanyJobId$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card mb-2 mapping-info-container"
  >
    <div
      class="card-header"
    >
      <h6
        class="mr-auto mb-0 font-weight-bold"
      >
        Job Information
      </h6>
      
      <a
        class="close-panel mr-2 mt-1"
        href="javascript:void(0)"
        title="Close"
      >
        <fa-icon
          icon="times"
        />
      </a>
    </div>
    <div
      class="d-flex h-100"
    >
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-job-info-container />
      </div>
      <div
        class="vertical-separator mt-3 mb-2"
      />
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-async-container
          class="company-job-mapping-container"
        >
          
          
          <div
            class="company-job-mapping-add"
          >
            <h5
              class="font-weight-bold mb-4"
            >
              Search for Company Job
            </h5>
            <div
              style="display:flex;"
            >
              <pf-input-debounce
                class="search-box"
              />
              <pf-input-debounce
                class="search-box"
              />
            </div>
            <div
              class="mapping-results-container remove-scroll"
            >
              <pf-async-container>
                
                
              </pf-async-container>
            </div>
          </div>
        </pf-async-container>
      </div>
    </div>
  </div><pf-confirm-create-project-modal /><pf-delete-mapping-confirmation-modal />
</pf-exchange-job-mapping-info>
`;

exports[`Peer - Exchange Job Mapping Info should display a carousel when more than one company job is mapped 1`] = `
<pf-exchange-job-mapping-info
  activeExchangeJobToCompanyJobIdSubscription={[Function Subscriber]}
  addingMapping="false"
  addingMapping$={[Function Store]}
  addingMappingSubscription={[Function Subscriber]}
  applyingMapping$={[Function Store]}
  applyingMappingError$={[Function Store]}
  carousel="undefined"
  closeClicked={[Function EventEmitter]}
  companyDescriptionQuery=""
  companyJobQuery=""
  companyJobsToMapTo$={[Function Store]}
  companyJobsToMapToLoading$={[Function Store]}
  companyJobsToMapToLoadingError$={[Function Store]}
  debouncedQueryValue=""
  deletingMapping$={[Function Store]}
  deletingMappingError$={[Function Store]}
  editMappingClicked={[Function EventEmitter]}
  exchangeJobInfo={[Function Object]}
  getActiveCompanyJobId$={[Function Store]}
  loadingExchangeMappingInfo$={[Function Store]}
  permissions={[Function Function]}
  selectedCompanyJob={[Function Object]}
  selectedCompanyJobInfoModels$={[Function Store]}
  selectedCompanyJobsSubscription={[Function Subscriber]}
  selectedExchangeJobMapping={[Function Object]}
  selectedExchangeJobMapping$={[Function Store]}
  selectedExchangeJobMappingSubscription={[Function Subscriber]}
  selectedJobs={[Function Array]}
  selectedMappingCompanyJobId$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card mb-2 mapping-info-container"
  >
    <div
      class="card-header"
    >
      <h6
        class="mr-auto mb-0 font-weight-bold"
      >
        Job Information
      </h6>
      
      
      <button
        class="btn btn-sm mr-4 btn-secondary"
        id="add-mapping-button"
      >
        <span>
          Add Match
        </span>
      </button>
      <a
        class="close-panel mr-2 mt-1"
        href="javascript:void(0)"
        title="Close"
      >
        <fa-icon
          icon="times"
        />
      </a>
    </div>
    <div
      class="d-flex h-100"
    >
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-job-info-container />
      </div>
      <div
        class="vertical-separator mt-3 mb-2"
      />
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-async-container
          class="company-job-mapping-container"
        >
          
          <div
            class="company-job-mapping d-flex flex-column justify-content-between"
          >
            <ngb-carousel>
              
              
              
              
              
            </ngb-carousel>
            
            <div
              class="carousel-controls d-flex flex-row justify-content-between"
            >
              <div
                class="control control-left"
              >
                <fa-icon
                  icon="chevron-circle-left"
                  size="2x"
                />
              </div>
              <div
                class="indicators flex-grow-1 space-out-children text-center"
              >
                
                <span
                  class="control active"
                >
                  <fa-icon
                    icon="circle"
                  />
                </span>
                <span
                  class="control"
                >
                  <fa-icon
                    icon="circle"
                  />
                </span>
              </div>
              <div
                class="control control-right"
              >
                <fa-icon
                  icon="chevron-circle-right"
                  size="2x"
                />
              </div>
            </div>
          </div>
          
        </pf-async-container>
      </div>
    </div>
  </div><pf-confirm-create-project-modal /><pf-delete-mapping-confirmation-modal />
</pf-exchange-job-mapping-info>
`;

exports[`Peer - Exchange Job Mapping Info should display an add mapping button, when the selected exchange job mapping is mapped 1`] = `
<pf-exchange-job-mapping-info
  activeExchangeJobToCompanyJobIdSubscription={[Function Subscriber]}
  addingMapping="false"
  addingMapping$={[Function Store]}
  addingMappingSubscription={[Function Subscriber]}
  applyingMapping$={[Function Store]}
  applyingMappingError$={[Function Store]}
  carousel="undefined"
  closeClicked={[Function EventEmitter]}
  companyDescriptionQuery=""
  companyJobQuery=""
  companyJobsToMapTo$={[Function Store]}
  companyJobsToMapToLoading$={[Function Store]}
  companyJobsToMapToLoadingError$={[Function Store]}
  debouncedQueryValue=""
  deletingMapping$={[Function Store]}
  deletingMappingError$={[Function Store]}
  editMappingClicked={[Function EventEmitter]}
  exchangeJobInfo={[Function Object]}
  getActiveCompanyJobId$={[Function Store]}
  loadingExchangeMappingInfo$={[Function Store]}
  permissions={[Function Function]}
  selectedCompanyJobInfoModels$={[Function Store]}
  selectedCompanyJobsSubscription={[Function Subscriber]}
  selectedExchangeJobMapping={[Function Object]}
  selectedExchangeJobMapping$={[Function Store]}
  selectedExchangeJobMappingSubscription={[Function Subscriber]}
  selectedJobs={[Function Array]}
  selectedMappingCompanyJobId$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card mb-2 mapping-info-container"
  >
    <div
      class="card-header"
    >
      <h6
        class="mr-auto mb-0 font-weight-bold"
      >
        Job Information
      </h6>
      
      
      <button
        class="btn btn-sm mr-4 btn-secondary"
        id="add-mapping-button"
      >
        <span>
          Add Match
        </span>
      </button>
      <a
        class="close-panel mr-2 mt-1"
        href="javascript:void(0)"
        title="Close"
      >
        <fa-icon
          icon="times"
        />
      </a>
    </div>
    <div
      class="d-flex h-100"
    >
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-job-info-container />
      </div>
      <div
        class="vertical-separator mt-3 mb-2"
      />
      <div
        class="w-50 pt-3 pl-3"
      >
        <pf-async-container
          class="company-job-mapping-container"
        >
          
          <div
            class="company-job-mapping d-flex flex-column justify-content-between"
          >
            <ngb-carousel>
              
            </ngb-carousel>
            
          </div>
          
        </pf-async-container>
      </div>
    </div>
  </div><pf-confirm-create-project-modal /><pf-delete-mapping-confirmation-modal />
</pf-exchange-job-mapping-info>
`;
